--- a/package.json
+++ b/package.json
@@ -27,5 +27,20 @@
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
     "typescript": "^2.1.5"
+  },
+  "dependencies": {
+    "@angular/common": "^2.4.3",
+    "@angular/compiler": "^2.4.3",
+    "@angular/core": "^2.4.3",
+    "@angular/forms": "^2.4.3",
+    "@angular/http": "^2.4.3",
+    "@angular/platform-browser": "^2.4.3",
+    "@angular/platform-browser-dynamic": "^2.4.3",
+    "@angular/router": "^3.4.3",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.0.3",
+    "systemjs": "^0.19.42",
+    "zone.js": "^0.7.6"
   }
 }
